--- a/WebTour/src/main/resources/static/css/order.css
+++ b/WebTour/src/main/resources/static/css/order.css
@@ -194,17 +194,8 @@ th {
 
 .btn-payment-status {
 	background: yellow;
+	width: 46%;
 	border-radius: 12px;
-}
-
-.btn-cancel {
-	padding: 12px;
-	background-color: #eeeeee;
-	border-radius: 4px;
-	border: none;
-}
-
-.btn-payment-status {
 	padding: 12px;
 	background-color: #fac71e;
 	border-radius: 4px;
@@ -242,12 +233,13 @@ th {
 .btn-cancel {
 	background-color: #ff4d4f;
 	color: white;
-	border: none;
-	padding: 5px 10px;
-	border-radius: 4px;
 	cursor: pointer;
 	margin-left: 5px;
 	transition: background-color 0.3s;
+	width: 46%;
+	padding: 12px;
+	border-radius: 4px;
+	border: none;
 }
 
 .btn-cancel:hover {
@@ -279,10 +271,6 @@ th {
 	text-align: center;
 	max-width: 400px;
 	width: 90%;
-}
-
-.btn-cancel {
-	margin-top: 2%;
 }
 
 .table-td-action {
