--- a/WebTour/src/main/resources/templates/User/insurance-tour.html
+++ b/WebTour/src/main/resources/templates/User/insurance-tour.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Giới thiệu - ND Travel</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,7 +12,7 @@
 		    padding: 0;	
         }
         .content{
-        	margin: 0 22px;
+        	padding: 20px 100px;
         }
         h1, h2, h3 {
             font-weight: normal;
@@ -45,7 +46,6 @@
     text-align: center;
     padding: 40px 20px;
     border-radius: 16px;
-    max-width: 80%;
     position: relative;
 }
 
@@ -82,59 +82,10 @@
     bottom: 16.4%;
 }
 
-.footer {
-    background-color: #f9f9f9;
-    padding: 40px 20px;
-    text-align: left;
-    display: flex;
-}
-
-.footer .column {
-    width: 25%;
-    display: inline-block;
-    vertical-align: top;
-    padding: 0 10px;
-}
-
-.footer .column h3 {
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-.footer .column p,
-.footer .column a {
-    font-size: 14px;
-    color: #333;
-    text-decoration: none;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.footer .social-icons a {
-    font-size: 20px;
-    margin-right: 10px;
-    color: #333;
-}
-
-.footer .app-links img {
-    width: 120px;
-    margin-right: 10px;
-}
-
-.footer .payment-methods img {
-    width: 50px;
-    margin-right: 10px;
-}
-
-.footer .copyright {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    color: #666;
-}
     </style>
 </head>
 <body>
+<header id="header"></header>
 	<div class="content">
 		<h1>Giới thiệu</h1>
     <h2>1. Chúng tôi là ND Travel</h2>
@@ -183,132 +134,7 @@
   </div>
 </div>
 </div>
-  <div class="footer">
-   <div class="column">
-    <h3>
-     THÔNG TIN LIÊN HỆ
-    </h3>
-    <p>
-     <strong>
-      Địa chỉ
-     </strong>
-     <br/>
-     Tòa nhà Ladeco, 266 Đội Cấn, Ba Đình, Hà Nội
-    </p>
-    <p>
-     <strong>
-      Email
-     </strong>
-     <br/>
-     support@sapo.vn
-    </p>
-    <p>
-     <strong>
-      Hotline
-     </strong>
-     <br/>
-     1900 6750
-    </p>
-    <p>
-     <strong>
-      Thời gian hỗ trợ
-     </strong>
-     <br/>
-     08:30 - 21:30 các ngày trong tuần
-    </p>
-   </div>
-   <div class="column">
-    <h3>
-     HƯỚNG DẪN
-    </h3>
-    <a href="#">
-     Trang chủ
-    </a>
-    <a href="#">
-     Giới thiệu
-    </a>
-    <a href="#">
-     Tour du lịch
-    </a>
-    <a href="#">
-     Tin tức
-    </a>
-    <a href="#">
-     Faqs
-    </a>
-    <a href="#">
-     Liên hệ
-    </a>
-   </div>
-   <div class="column">
-    <h3>
-     THÔNG TIN CẦN BIẾT
-    </h3>
-    <a href="#">
-     Về chúng tôi
-    </a>
-    <a href="#">
-     Câu hỏi thường gặp
-    </a>
-    <a href="#">
-     Điều kiện, điều khoản
-    </a>
-    <a href="#">
-     Quy chế hoạt động
-    </a>
-    <a href="#">
-     Liên hệ
-    </a>
-   </div>
-   <div class="column">
-    <h3>
-     KẾT NỐI
-    </h3>
-    <div class="social-icons">
-     <a href="#">
-      <i class="fab fa-facebook-f">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-youtube">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-twitter">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-instagram">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-google">
-      </i>
-     </a>
-    </div>
-    <h3>
-     TẢI ỨNG DỤNG ND TRAVEL
-    </h3>
-    <div class="app-links">
-     <a href="#">
-      <img alt="App Store" height="40" src="https://storage.googleapis.com/a1aa/image/GP10CZ2ZZFYjG9L6Q0cCiOO4SysG0gQeEsLifS3Ekq6HIUkTA.jpg" width="120"/>
-     </a>
-     <a href="#">
-      <img alt="Google Play" height="40" src="https://storage.googleapis.com/a1aa/image/0aTyPKL8LM5NI9j3ze85b6bv9UpGCoKiICiQSObZekPOIUkTA.jpg" width="120"/>
-     </a>
-    </div>
-    <h3>
-     PHƯƠNG THỨC THANH TOÁN
-    </h3>
-    <div class="payment-methods">
-     <img alt="VNPayQR" height="30" src="https://storage.googleapis.com/a1aa/image/ef9UQZhd2fFN9pSe3JNhsn3zD8xnP47wJgYQyhpb9oKrgQROB.jpg" width="50"/>
-     <img alt="JCB" height="30" src="https://storage.googleapis.com/a1aa/image/GaozgSttlHo3Jp77ZZzU5wwmA7muK6Eye3qQ9KwxTetLIUkTA.jpg" width="50"/>
-     <img alt="SCB" height="30" src="https://storage.googleapis.com/a1aa/image/FQKIO8rjDs7wD900yg2kffwND0JAheqVDZnpF3CcxPqZQoInA.jpg" width="50"/>
-     <img alt="Visa" height="30" src="https://storage.googleapis.com/a1aa/image/hV3YOHZjXqJ0Cl1KETgaaHfhf8k0TRdSUVmQdiNzHZjPIUkTA.jpg" width="50"/>
-     <img alt="MasterCard" height="30" src="https://storage.googleapis.com/a1aa/image/2l5Sj2EEfM2MYaAfeswuSOTkE9Tet9HU3oeH6N9Tgx3FBhicC.jpg" width="50"/>
-    </div>
-   </div>
-   
-  </div>
+  <div id="footer"></div>
+  <script src="/js/header.js"></script>
 </body>
 </html>
