--- a/WebTour/src/main/resources/templates/User/refund.html
+++ b/WebTour/src/main/resources/templates/User/refund.html
@@ -82,7 +82,7 @@
 			</button>
 		</div>
 	</div>
-
+<div id="footer"></div>
 	<div id="notification"></div>
 	<script src="/js/header.js"></script>
 	<script src="/js/notification.js"></script>
