--- a/WebTour/src/main/resources/templates/User/search.html
+++ b/WebTour/src/main/resources/templates/User/search.html
@@ -185,6 +185,7 @@
             </li>
         </ul>
     </div>
+    <div id="footer"></div>
     <script type="text/javascript">document.addEventListener("DOMContentLoaded", function() {
         // Lấy tất cả các phần tử có chứa tour-duration
         const tourDurations = document.querySelectorAll('.tour-duration');
