--- a/WebTour/src/main/resources/templates/User/change-password.html
+++ b/WebTour/src/main/resources/templates/User/change-password.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Trang Tài Khoản</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
 body {
 	font-family: Arial, sans-serif;
@@ -95,7 +96,7 @@ a:hover{
 </style>
 </head>
 <body>
-
+<header id="header"></header>
 	<div class="container">
 		<div class="left">
 			<h2>TRANG TÀI KHOẢN</h2>
@@ -138,6 +139,8 @@ a:hover{
 			</div>
 		</div>
 	</div>
+	<div id="footer"></div>
+	<script src="/js/header.js"></script>
 	<script>
 		let userId = sessionStorage.getItem("userId");
 		
