--- a/WebTour/src/main/resources/templates/User/detailTourForPayment.html
+++ b/WebTour/src/main/resources/templates/User/detailTourForPayment.html
@@ -11,13 +11,11 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!-- <link rel="stylesheet" href="/css/home_user.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="/css/home_user.css">
+
 </head>
 <body>
-<header id="header"></header>
-	<div class="container-content">
-		<div class="header-content">
+	<div class="container">
+		<div class="header">
 			<h1 th:text="${tour.tourName}">Tour Name</h1>
 		</div>
 		<div class="info">
@@ -82,8 +80,8 @@
 					<!-- <p class="original-price">2.000.000₫</p> -->
 					<div class="code-tour">
 						<p>Mã tour:</p>
-						<p th:text="${tourId}" id="id-booking-info"
-							th:attr="data-id=${tourId}" class="tour-code">ND021</p>
+						<p th:text="${tour.tourId}" id="id-booking-info"
+							th:attr="data-id=${tour.tourId}" class="tour-code">ND021</p>
 					</div>
 					<div class="date-picker">
 						<p class="title">Ngày đi</p>
@@ -143,21 +141,15 @@
 
 						</div>
 
-					<div id="schedule" class="tab-content">
-					    <div th:each="schedule : ${schedules}">
-					        <p class="schedule-p">
-					            <div class="schedule-day-container">
-					                <span class="schedule-p-span"> <b>Ngày thứ</b> </span>
-					                <div class="schedule-step" th:text="${schedule.step}"></div>
-					            </div>
-					            <div class="schedule-activity-container">
-					                <pre class="schedule-activity" th:text="${schedule.activity}"></pre>
-					            </div>
-					        </p>
-					    </div>
-					</div>
-
-						
+						<div id="schedule" class="tab-content">
+							<div th:each="schedule : ${schedules}">
+								<p class="schedule-p">
+									Ngày thứ <span class="schedule-p-span"
+										th:text="${schedule.step}"> </span>: <span
+										class="schedule-p-span" th:text="${schedule.activity}"></span>
+								</p>
+							</div>
+						</div>
 						<div id="reviews" class="tab-content">
 							<div class="container4">
 								<div class="message">Đánh giá tour theo cảm nhận của bạn
@@ -223,9 +215,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="footer"></div>
-	<script src="/js/header.js"></script>
 	<script src="../js/detailTour.js"></script>
-	
+	<script src="/js/header.js"></script>
 </body>
 </html>
