--- a/WebTour/src/main/resources/templates/User/notificationSuccess.html
+++ b/WebTour/src/main/resources/templates/User/notificationSuccess.html
@@ -97,6 +97,7 @@
 			</button>
 		</div>
 	</div>
+	<div id="footer"></div>
 	<script src="/js/header.js"></script>
 	<script src="../js/notificationSuccess.js"></script>
 </body>
