--- a/WebTour/src/main/resources/templates/User/profile.html
+++ b/WebTour/src/main/resources/templates/User/profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Tài Khoản</title>
+    <link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -132,7 +134,7 @@
     </style>
 </head>
 <body>
-
+<header id="header"></header>
     <div class="container">
         <div class="left">
             <h2>TRANG TÀI KHOẢN</h2>
@@ -226,7 +228,8 @@
         </div>
     </div>
 </div>
-
+<div id="footer"></div>
+<script src="/js/header.js"></script>
     <script>
 	    var email = document.getElementById('email').addEventListener('input', validateEmail);
 		var name = document.getElementById('fullName').addEventListener('input', validateName);
