--- a/WebTour/src/main/resources/templates/components/headerAdmin.html
+++ b/WebTour/src/main/resources/templates/components/headerAdmin.html
@@ -5,6 +5,6 @@
 </div>
 <div class="user-info">
 	<img alt="User Avatar" height="40"
-		src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg"
+		src="..//imagess//background_dark_v1.jpg"
 		width="40" /> <span> John Doe </span>
 </div>
