--- a/WebTour/src/main/resources/templates/components/sidebarAdmin.html
+++ b/WebTour/src/main/resources/templates/components/sidebarAdmin.html
@@ -2,72 +2,73 @@
 @charset "UTF-8";
 
 .sidebar {
-    width: 250px;
-    height: 100vh;
-    background-color: #343a40;
-    color: #fff;
-    padding-top: 20px;
-    position: fixed;
-    border-right: 1px solid #e3e6f0;
-    top: 0;
-    left: 0;
-    transition: width 0.3s ease;
-    overflow: hidden;
+	width: 250px;
+	height: 100vh;
+	background-color: #343a40;
+	color: #fff;
+	padding-top: 20px;
+	position: fixed;
+	border-right: 1px solid #e3e6f0;
+	top: 0;
+	left: 0;
+	transition: width 0.3s ease;
+	overflow: hidden;
 }
 
 .sidebar .logo {
-    text-align: center;
-    margin-bottom: 30px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 
 .sidebar .logo img {
-    border-radius: 50%;
-    border: 2px solid #fff;
+	background-color: white; border-radius : 50%;
+	border: 2px solid #fff;
+	border-radius: 50%;
 }
 
 .sidebar ul.nav {
-    list-style-type: none;
-    padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
 
 .sidebar ul.nav li {
-    margin: 10px 0px;
-    padding: 10px 20px;
+	margin: 10px 0px;
+	padding: 10px 20px;
 }
 
 .sidebar ul.nav li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    border-radius: 4px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+	color: #fff;
+	text-decoration: none;
+	font-size: 16px;
+	padding: 10px 20px;
+	display: flex;
+	align-items: center;
+	border-radius: 4px;
+	transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .sidebar ul.nav li a i {
-    margin-right: 15px;
-    font-size: 18px;
+	margin-right: 15px;
+	font-size: 18px;
 }
 
 .sidebar ul.nav li a:hover {
-    background-color: #495057;
-    color: #f8f9fa;
+	background-color: #495057;
+	color: #f8f9fa;
 }
 
 .sidebar ul.nav li a i.fas {
-    transition: transform 0.3s ease;
+	transition: transform 0.3s ease;
 }
 
 .sidebar ul.nav li a:hover i.fas {
-    transform: scale(1.2);
+	transform: scale(1.2);
 }
 </style>
 
 <div class="logo">
-	<img alt="" height="50" width="50"
-		src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
+	<img alt="" height="150" width="150"
+		src="..//imagess//background_light_v1.jpg" />
 </div>
 <ul class="nav">
 	<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i>
@@ -84,7 +85,8 @@
 	<li><a th:href="@{/admin/tours-management}"> <i
 			class="fas fa-plane"> </i> Tours
 	</a></li>
-	<li><a href="/"> <i class="fa-solid fa-right-from-bracket"></i> Logout
+	<li><a href="/"> <i class="fa-solid fa-right-from-bracket"></i>
+			Logout
 	</a></li>
 
 </ul>
