--- a/WebTour/src/main/resources/templates/home.html
+++ b/WebTour/src/main/resources/templates/home.html
@@ -478,7 +478,7 @@
 	        <header class="header">
 	        <div class="overlay">
 	            <div class="content">
-	                <h1>Du lịch cùng ND TRAVEL</h1>
+	                <h1>Du lịch cùng M & N TRAVEL</h1>
 	                <p>Vinh hạnh của chúng tôi là mang đến cho bạn những chuyến đi đáng nhớ. 
 	                Mang đến cho bạn những chuyến đi đầy cảm hứng. Khám phá những vùng đất mới. Tự do khám phá cùng chúng tôi.</p>
 	            </div>
@@ -549,19 +549,19 @@
 	        <div class="steps">
 	            <div class="step">
 	                <div class="step-number">1</div>
-	                <img src="/image/location.png" alt="Find Destination Icon">
+	                <img src="/imagess/location.png" alt="Find Destination Icon">
 	                <h3>Tìm nơi muốn đến</h3>
 	                <p>Bất cứ nơi đâu bạn muốn đến, chúng tôi có tất cả những gì bạn cần.</p>
 	            </div>
 	            <div class="step">
 	                <div class="step-number">2</div>
-	                <img src="/image/ticket.png" alt="Book Ticket Icon">
+	                <img src="/imagess/ticket.png" alt="Book Ticket Icon">
 	                <h3>Đặt vé</h3>
 	                <p>ND Travel sẽ hỗ trợ bạn đặt vé trực tiếp nhanh chóng và thuận tiện.</p>
 	            </div>
 	            <div class="step">
 	                <div class="step-number">3</div>
-	                <img src="/image/payment.png" alt="Payment Icon">
+	                <img src="/imagess/payment.png" alt="Payment Icon">
 	                <h3>Thanh toán</h3>
 	                <p>Hoàn thành bước thanh toán và sẵn sàng cho chuyến đi ngay thôi.</p>
 	            </div>
@@ -585,7 +585,7 @@
 	        <a href="#" class="see-more">Xem thêm →</a>
 	    </section>
     
-
+<div id="footer"></div>
         <script>
             const searchBox = document.getElementById('searchBox');
             const emptyBox = document.getElementById('emptyBox');
@@ -789,6 +789,11 @@
 	                }
                 }
                 getUser();
+                fetch("/api-get-footer")
+        		.then(response => response.text())
+        		.then(data => {
+        			document.getElementById("footer").innerHTML = data;
+        		})
             </script>
     
 </body>
