update tours image, tour_management
thanks forr watch

--- a/WebTour/src/main/resources/templates/User/change-password.html
+++ b/WebTour/src/main/resources/templates/User/change-password.html
@@ -108,7 +108,7 @@ a:hover{
 				<a id="account" href="/account">Thông tin tài khoản</a>
 			</p>
 			<p>
-				<a href="/account/tour-booking">Đơn hàng của bạn</a>
+				<a id="mybooking" href="/account/tour-booking">Đơn hàng của bạn</a>
 			</p>
 			<p>
 				<a href="/account/change-password">Đổi mật khẩu</a>
@@ -147,6 +147,8 @@ a:hover{
 	    if (userId) {
 	    	var account = document.getElementById("account");
 	    	account.href="/account?userId="+userId;
+	    	var mybooking = document.getElementById("mybooking");
+	    	mybooking.href="/account/get-order?userId="+userId;
 	    }
 	    
 	    async function handleChangePassword(event) {
