--- a/WebTour/src/main/resources/templates/User/insurance-tour.html
+++ b/WebTour/src/main/resources/templates/User/insurance-tour.html
@@ -69,6 +69,7 @@
 
 .subscribe-section button {
     right: 31.2%;
+    top: 65%;
     position: absolute;
     padding: 10px 20px;
     border: none;
