--- a/WebTour/src/main/resources/templates/Admin/tours_management.html
+++ b/WebTour/src/main/resources/templates/Admin/tours_management.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/sidebar_admin.css">
 <link rel="stylesheet" href="/css/tours_management.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -51,39 +53,128 @@
 			</div>
 		</div>
 		<div class="table-container">
-			<h2 class="mb-20">Customer</h2>
+			<div class="header-content">
+				<h2 class="mb-20">Tours</h2>
+				<p class="create-tours-btn" id="add-tours-btn">Tạo
+					Tour</p>
+			</div>
 			<div class="filter">
-				
 				<button id="filter-customer-desc">Tăng</button>
 				<button id="filter-customer-asc">Giảm</button>
 			</div>
 			<table>
 				<thead>
 					<tr>
-						<th>#</th>
-						<th>Tên tour</th>
-						<th>Điểm đến</th>
-						<th>Điểm đi</th>
-						<th>Ngày bắt đầu</th>
-						<th>Ngày kết thúc</th>
-						<th>Giá</th>
+						<th id="id" class="col-id">#</th>
+				        <th class="col-tour-name">Tên tour</th>
+				        <th class="col-departure">Khởi hành</th>
+				        <th class="col-destination">Điểm đến</th>
+				        <th class="col-start-date">Ngày bắt đầu</th>
+				        <th class="col-end-date">Ngày kết thúc</th>
+				        <th class="col-transport">Phương tiện</th>
+				        <th class="col-quantity">SL</th>
+				        <th class="col-price">Giá</th>
+				        <th class="col-action">Action</th>
 					</tr>
 				</thead>
 				<tbody id="user-table">
 					<tr th:each="tour : ${tours}">
 						<td th:text="${tour.tourId}"></td>
-						<td th:text="${tour.tourName}"></td>
-						<td th:text="${tour.departure}"></td>
-						<td th:text="${tour.destination}"></td>
+						<td class="col-tour-name" th:attr="title=${tour.tourName}" th:text="${#strings.abbreviate(tour.tourName, 36)}"></td>					
+						
+						<td class="col-departure" th:attr="title=${tour.departure}" th:text="${#strings.abbreviate(tour.departure, 36)}"></td>
+					
+						<td class="col-destination" th:attr="title=${tour.destination}" th:text="${#strings.abbreviate(tour.destination, 25)}"></td>
 						<td th:text="${tour.startDate}"></td>
 						<td th:text="${tour.endDate}"></td>
+						<td th:text="${tour.transport}"></td>
+						<td th:text="${tour.peopleMax}"></td>
 						<td th:text="${tour.price}"></td>
+						<td>
+			                <a href="javascript:void(0);" th:attr="data-tourid=${tour.tourId}" onclick="editTour(this)" class="icon-action edit-icon">
+			                    <i class="fas fa-pencil-alt"></i>
+			                </a>
+			                <a href="javascript:void(0);" th:attr="data-tourid=${tour.tourId}" onclick="deleteTour(this)" class="icon-action delete-icon">
+			                    <i class="fas fa-trash-alt"></i>
+			                </a>
+			            </td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
+	<!-- Pagination -->
+    <div class="pagination-container">
+        <ul class="pagination" id="pagination">
+            <li th:if="${currentPage > 0}">
+                <button th:attr="onclick='loadPage(' + (${currentPage - 1}) + ')'">
+                    <i class="fas fa-chevron-left icon"></i>
+                </button>
+            </li>
+
+            <li th:each="i : ${#numbers.sequence(1, totalPages)}">
+                <a th:attr="onclick='loadPage(' + (${i - 1}) + ')'"
+                   th:text="${i}"
+                   th:class="${currentPage == i - 1} ? 'current' : ''"></a>
+            </li>
+
+            <li th:if="${currentPage + 1 < totalPages}">
+                <button th:attr="onclick='loadPage(' + (${currentPage + 1}) + ')'">
+                    <i class="fas fa-chevron-right icon"></i>
+                </button>
+            </li>
+        </ul>
+    </div>
+	<!-- Form tạo tours -->
+	<div class="overlay" id="overlay"></div>
+<div class="form-popup" id="form-popup">
+    <i class="fas fa-times close-icon" onclick="closeForm()"></i>
+    <h3>Nhập thông tin Tour</h3>
+    <form id="tour-form">
+        <label>Tên tour</label>
+        <input type="text" id="tourName" required>
+        
+        <div class="form-row">
+            <div class="form-group">
+                <label>Khởi hành</label>
+                <input type="text" id="departure" required>
+            </div>
+            <div class="form-group">
+                <label>Điểm đến</label>
+                <input type="text" id="destination" required>
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group">
+                <label>Ngày bắt đầu</label>
+                <input type="date" id="startDate" required>
+            </div>
+            <div class="form-group">
+                <label>Ngày kết thúc</label>
+                <input type="date" id="endDate" required>
+            </div>
+        </div>
+
+        <label>Mô tả</label>
+        <textarea id="detail" required></textarea>
+
+        <div class="form-row">
+            <div class="form-group">
+                <label>Số lượng</label>
+                <input type="number" id="peopleMax" required>
+            </div>
+            <div class="form-group">
+                <label>Giá</label>
+                <input type="number" id="price" required>
+            </div>
+        </div>
+
+        <button type="submit">Lưu</button>
+    </form>
+</div>
+
 	
-	<script src="../js/customer_management.js"></script>
+	<script src="../js/tours_management.js"></script>
 </body> 
 </html>
