--- a/WebTour/src/main/resources/static/css/tours_management.css
+++ b/WebTour/src/main/resources/static/css/tours_management.css
@@ -303,8 +303,8 @@ th, td {
 
 .form-popup button {
     margin-top: 15px;
-    padding: 10px;
-    width: 100%;
+    /* padding: 10px; */
+    width: 18%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -357,7 +357,61 @@ th, td {
         .pagination .icon {
             font-size: 18px;
         }
+		.image-preview-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-top: 10px;
+    }
 
+    .image-preview {
+        position: relative;
+        display: inline-block;
+    }
+
+    .image-preview img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 5px;
+        border: 2px solid transparent;
+    }
+
+    .image-preview.selected img {
+        border: 2px solid #4CAF50; /* Đổi màu viền khi chọn làm background */
+    }
+
+    .background-toggle {
+        position: absolute;
+        top: 62%;
+        left: 3%;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        width: 20px;
+        height: 18%;
+        font-size: 12px;
+        text-align: center;
+        line-height: 20px;
+    }
+
+    .remove-image {
+        position: absolute;
+        top: -13%;
+        right: 2%;
+        color: #000;
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        width: 20px;
+        height: 18%;
+        font-size: 18px;
+        text-align: center;
+        line-height: 20px;
+    }
+    
 .col-id { width: 5%; }
 .col-tour-name { width: 15%; }
 .col-departure { width: 10%; }
