--- a/WebTour/src/main/resources/templates/Admin/promotion_management.html
+++ b/WebTour/src/main/resources/templates/Admin/promotion_management.html
@@ -78,7 +78,7 @@
 					<div class="auth-form__form">
 						<div class="auth-form__group">
 							<div class="d-flex space-between">
-								<label for="name" class="weight-6">Mã khuyến mãi *</label>
+								<label for="name" class="weight-6 fs-14">Mã khuyến mãi *</label>
 								<p id="random-string" class="random-string">Sinh mã ngẫu
 									nhiên</p>
 							</div>
@@ -86,41 +86,46 @@
 								id="promotion-code">
 							<div class="error"></div>
 						</div>
-						<div class="auth-form__group mt-16">
-							<p for="name" class="pro-cate weight-6">Phần trăm khuyến mãi
+						<div class="auth-form__group mt-10">
+							<p for="name" class="pro-cate weight-6 fs-14">Phần trăm khuyến mãi
 								*</p>
 							<div class="pd-bt-6px">
 								<input type="text" name="promotion" value="" id="discount"
 									class="auth-form__input">
 							</div>
-
-
 						</div>
+						
+						<div class="auth-form__group mt-10">
+							<p for="name" class="pro-cate weight-6 fs-14">Điểm tích lũy (cần có để áp dụng)</p>
+							<div class="pd-bt-6px promotion-value-wr">
+								<input type="text" name="promotion" value="" id="cumulative-points"
+									class="auth-form__input">
+							</div>
 
-						<div class="auth-form__group mt-16">
-							<p class="weight-6">Thời gian *</p>
+						<div class="auth-form__group mt-10">
+							<p class="weight-6 fs-14">Thời gian *</p>
 							<div class="mt-8">
 								<div class="d-flex space-between">
-									<label for="" class="align-center d-flex">Thời gian bắt
+									<label for="" class="align-center d-flex fs-14">Thời gian bắt
 										đầu</label> <input type="date" id="datetime-start"
 										class="datetime-start" name="datetime">
 								</div>
 								<div class="d-flex space-between mt-8">
-									<label for="" class="align-center d-flex">Thời gian kết
+									<label for="" class="align-center d-flex fs-14">Thời gian kết
 										thúc</label> <input type="date" id="datetime-end" class="datetime-end"
 										name="datetime">
 								</div>
 							</div>
 						</div>
 
-						<div class="auth-form__group mt-16">
-							<label for="name" class="weight-6">Chi tiết</label>
-							<textarea rows="6" class="w-max mt-8 description"
+						<div class="auth-form__group mt-10">
+							<label for="name" class="weight-6 fs-14">Chi tiết</label>
+							<textarea rows="4" class="w-max mt-8 description"
 								id="description"></textarea>
 							<div class="error"></div>
 						</div>
 					</div>
-
+					</div>
 					<div class="auth-form__control">
 						<button class="btn auth-form__control-back btn--normal btn-cancel"
 							id="close-modal-btn">Trở lại</button>
