--- a/WebTour/src/main/resources/templates/User/vouchers.html
+++ b/WebTour/src/main/resources/templates/User/vouchers.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Chương trình khuyến mãi</title>
+    <title>Vouchers</title>
 </head>
 <body>
-	<h1>Chương trình khuyến mãi</h1>
+    <h1>Danh sách Voucher</h1>
+
+    <div th:if="${errorMessage}">
+        <p th:text="${errorMessage}"></p>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Mã Voucher</th>
+                <th>Mô tả</th>
+                <th>Giảm giá</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="booking : ${bookings}">
+                <td th:text="${booking[0]}"></td> <!-- Promotion ID -->
+                <td th:text="${booking[1]}"></td> <!-- Code -->
+                <td th:text="${booking[2]}"></td> <!-- Description -->
+                <td th:text="${booking[3]}"></td> <!-- Discount -->
+            </tr>
+        </tbody>
+    </table>
+
+    
 </body>
 </html>
