--- a/WebTour/src/main/resources/templates/User/notificationSuccess.html
+++ b/WebTour/src/main/resources/templates/User/notificationSuccess.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Thông báo thanh toán</title>
-<link rel="stylesheet" href="../css/NotificationSuccess.css">
-<link rel="stylesheet" href="/css/notificationSuccess.js">
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="/css/home_user.css">
+	<meta charset="UTF-8">
+	<title>Thông báo thanh toán</title>
+	<link rel="stylesheet" href="../css/NotificationSuccess.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	
+	<link rel="stylesheet" href="/css/home_user.css">
+	
+  
+	
 </head>
 <body>
 <header id="header"></header>
-	<div class="container-content">
-		<div class="header-content">ND Travel</div>
+<div class="container-content">
+	<div class="sub-container-content">
+		<div class="header-content">M&N Travel</div>
 		<div class="confirmation">
 			<i class="fas fa-check-circle"> </i>
 			<div class="confirmation-text">
@@ -46,29 +47,40 @@
 		<div class="order-summary">
 			<div class="lable-bookingId">
 				<div class="lable-bookingId">
-					<label> <b>Mã tour:</b>
+					<label> <b>Mã thanh toán:</b>
 					</label> <b><p class="lable-p"
 							th:text="${bookingNotification.bookingId}">01</p></b>
 				</div>
 
+				<div class="lable-bookingId">
+					<label> <b>Mã tour:</b>
+					</label> <b><p class="lable-p"
+							th:text="${tourNotification.tourId}">01</p></b>
+				</div>
 			</div>
 
 
 			<div class="item">
-
 				<div class="item-info">
 					<b th:text="${tourNotification.tourName}"> Du Lịch </b>
-
 					<div th:each="ticketBooking : ${ticketBookingList}">
 						<div class="div-quantity">
 							<p th:text="${ticketBooking.ticket.name}">:</p>
 							<p th:text="${ticketBooking.quantity}" class="quantity-p"></p>
-
 						</div>
+					</div>
+					<div class="div-departure">
+						<label>Hướng dẫn viên:</label>
+						<p class="departure-p" th:text="${tourNotification.guides.user.fullName}"></p> 
+						<!-- <p class="departure-p" th:text="${guidesNotification.user.fullName}"></p> -->
 					</div>
 					<div class="div-departure">
 						<label>Ngày đi:</label>
 						<p class="departure-p" th:text="${tourNotification.startDate}"></p>
+					</div>
+					<div class="div-departure">
+						<label>Ngày về:</label>
+						<p class="departure-p" th:text="${tourNotification.endDate}"></p>
 					</div>
 					<div class="div-departure">
 						<label>khởi hành:</label>
@@ -79,26 +91,59 @@
 						<p class="departure-p" th:text="${tourNotification.destination}"></p>
 					</div>
 				</div>
-
 			</div>
 
 
 			<div class="total">
-				<b> Thành tiền </b> <b th:text="${bookingNotification.totalPrice}">
-					0đ </b>
+				<div class="sub-total">
+					<b> Tổng tiền: </b> 
+					<b th:text="${bookingNotification.totalPrice}">0đ </b>
+				</div>
+				<div class="sub-total">
+					<b>Chiết khấu:</b>
+				    <!-- Nếu có khuyến mãi và discount hợp lệ -->
+				    <b th:if="${promotionNotification != null }" 
+				       th:text="${promotionNotification.discount + '%'}">
+				       </b>
+				
+				    <!-- Nếu không tìm thấy hoặc xảy ra lỗi -->
+				    <b th:if="${promotionNotification == null}" > 0%
+				    </b>
+					<!-- <b th:text="${paymentNotification.totalPrice}">0đ </b> -->
+				</div>
+				<div class="sub-total">
+					<b> Mã giảm giá:</b> 
+					<b 
+					th:text="${paymentNotification.promotionCode}">0đ </b>
+				</div>
+				<div class="sub-total">
+					<b> Thành tiền: </b> 
+					<b th:text="${paymentNotification.amount}">0đ </b>
+				</div>
 			</div>
 		</div>
+</div>
+</div>
+	
 		<div class="actions">
 			<button id="bt-continuteShop">
 				<i class="fas fa-shopping-cart"> </i> Tiếp tục mua hàng
 			</button>
-			<button>
+			<button id="print-button">
 				<i class="fas fa-print"> </i> In
 			</button>
 		</div>
-	</div>
+	
 	<div id="footer"></div>
+	
 	<script src="/js/header.js"></script>
+	<!-- 	xuất kiểu hình ảnh (png)
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script> -->
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 	<script src="../js/notificationSuccess.js"></script>
+	
 </body>
 </html>
