--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -15,7 +15,7 @@
 <header id="header"></header>
 	<div class="container-content">
 		<div class="left">
-			<h1>ND Travel</h1>
+			<h1>M&N Travel</h1>
 
 			<div class="form-group">
 				<label for="email"> Email </label> <input th:value="${user.email}"
@@ -135,9 +135,8 @@
 					<div id="conversion-value" class="amount">0₫</div>
 					
 				</div>
-				
+				<!-- nút thanh toán (dùng paypal) -->
 				<div class="actions">
-					
 					<button  id="bt-pay" class="order-button">Thanh toán</button>
 				</div>
 				
@@ -147,10 +146,14 @@
 				<a href="#" class="back-to-cart">‹ Quay về giỏ hàng</a>
 			</div>
 		</div>
+		<div id="loading-screen" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); color: white; font-size: 20px; display: flex; justify-content: center; align-items: center;">
+	   		 Đang chuyển đến trang thanh toán...
+		</div>
 	</div>
 	<div id="footer"></div>
 	<script src="/js/header.js"></script>
 	<script src="../js/payment.js"></script>
+	
 	<script type="text/javascript">
 		window.onload = function() {
 			console.log("Bạn đã vào trang payment thành công!");
