--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -122,7 +122,7 @@
 						</div>
 					</div>
 					<div class="buttons">
-						<button>Liên hệ tư vấn</button>
+						<button class="btn-contract">Liên hệ tư vấn</button>
 						<button type="button" id="book-now">Đặt ngay</button>
 					</div>
 				</div>
