--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -116,8 +116,7 @@
 					</div>
 				</div>
 				<div class="apply-coupon">
-					<input id="discount-code" placeholder="Nhập mã giảm giá"
-						type="text" />
+					<input id="discount-code" placeholder="Nhập mã giảm giá" type="text" />
 					<button id="bt-apply">Áp dụng</button>
 				</div>
 				<div class="item">
@@ -143,7 +142,7 @@
 				<!-- paypal -->
 				<div id="paypal-button-container"></div>
 				
-				<a href="#" class="back-to-cart">‹ Quay về giỏ hàng</a>
+				
 			</div>
 		</div>
 		<div id="loading-screen" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); color: white; font-size: 20px; display: flex; justify-content: center; align-items: center;">
