--- a/WebTour/src/main/resources/templates/Admin/editSchedule.html
+++ b/WebTour/src/main/resources/templates/Admin/editSchedule.html
@@ -45,10 +45,14 @@
 					<td th:text="${schedule.activity}">Activity</td>
 					<td th:text="${schedule.location}">Location</td>
 					<td>
-						<button id="btEditScheduleInTable" class="bt-edit-in-table">Sửa</button>
+						<button id="btEditScheduleInTable" class="bt-action bt-edit-in-table">
+							<i class="fas fa-pencil-alt"></i>
+						</button>
 					</td>
 					<td>
-						<button id="bt-delete-schedule-in-table" class="btDelete-in-table">Xóa</button>
+						<button id="bt-delete-schedule-in-table" class="bt-action btDelete-in-table">
+							<i class="fas fa-trash-alt"></i>
+						</button>
 					</td>
 				</tr>
 			</tbody>
@@ -106,6 +110,7 @@
 
 	</div>
 	<script src="/js/header.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="../js/editSchedule.js"></script>
 </body>
 </html>
