--- a/WebTour/src/main/resources/static/css/tours_management.css
+++ b/WebTour/src/main/resources/static/css/tours_management.css
@@ -265,7 +265,7 @@ th, td {
      border-radius: 5px; 
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
     z-index: 101; /* Trên vùng tối */
-    width: 40%;
+    width: 42%;
     height: 90%;
     overflow-y: auto;
 }
@@ -282,7 +282,7 @@ th, td {
 }
 /* Các thành phần trong form */
 .form-popup h3 {
-    margin-top: 0;
+    margin-top: 10px;
     font-size: 1.2em;
     text-align: center;
 }
@@ -301,14 +301,7 @@ th, td {
     border-radius: 4px;
 }
 
-.form-popup button {
-    margin-top: 15px;
-    /* padding: 10px; */
-    width: 18%;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+
 
 /* Nút Lưu */
 .form-popup button[type="submit"] {
@@ -378,13 +371,13 @@ th, td {
     }
 
     .image-preview.selected img {
-        border: 2px solid #4CAF50; /* Đổi màu viền khi chọn làm background */
+        border: 4px solid #4409f4; /* Đổi màu viền khi chọn làm background */
     }
 
     .background-toggle {
         position: absolute;
-        top: 62%;
-        left: 3%;
+        top: 80%;
+    	left: -6%;
         background-color: #4CAF50;
         color: white;
         border: none;
@@ -399,8 +392,8 @@ th, td {
 
     .remove-image {
         position: absolute;
-        top: -13%;
-        right: 2%;
+        top: -6%;
+    	right: -8%;
         color: #000;
         border: none;
         border-radius: 50%;
@@ -411,7 +404,85 @@ th, td {
         text-align: center;
         line-height: 20px;
     }
+    .overlay1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: none;
+}
     
+    #editModal,
+#createModal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    z-index: 1000;
+    display: none;
+    width: 22%;
+}
+
+.modal-content,
+.modal-content-edit {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.btn-cancel,.btn-cancel-edit {
+	margin-top: 10px;
+    padding: 10px;
+    width: 100%;
+    background-color: red;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.edit-btn,.delete-btn{
+    padding: 10px;
+    width: 100%;
+    background-color: yellow;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.btn-insert-schedule{
+	margin-top: 10px;
+	padding: 10px;
+    width: 20%;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.btn-save-all,.btn-ok{
+	margin-top: 10px;
+	padding: 10px;
+    width: 100%;
+    background-color: #4bb04b;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#location-input,#activity-input,#location-input-edit,
+#activity-input-edit,.location-select,.location-select{
+	width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
 .col-id { width: 5%; }
 .col-tour-name { width: 15%; }
 .col-departure { width: 10%; }
