--- a/WebTour/src/main/resources/templates/Admin/tours_management.html
+++ b/WebTour/src/main/resources/templates/Admin/tours_management.html
@@ -137,11 +137,17 @@
         <div class="form-row">
             <div class="form-group">
                 <label>Khởi hành</label>
-                <input type="text" id="departure" required>
+                <select id="departureSelect" class="location-select" data-type="departure">
+	                	<option value="" disabled selected>Chọn điểm đi</option>
+						<option th:each="provinces: ${province}" th:value="${provinces.provinceId}" th:text="${provinces.name}">Chọn điểm đi</option>
+					</select>
             </div>
             <div class="form-group">
                 <label>Điểm đến</label>
-                <input type="text" id="destination" required>
+                <select id="destinationSelect" class="location-select" data-type="destination">
+	                	 <option value="" disabled selected>Chọn điểm đến</option>
+						<option th:each="provinces: ${province}" th:value="${provinces.provinceId}" th:text="${provinces.name}">Chọn điểm đi</option>
+					</select>
             </div>
         </div>
 
@@ -161,7 +167,11 @@
 
         <div class="form-row">
             <div class="form-group">
-                <label>Số lượng</label>
+                <label>Phương tiện</label>
+                <input type="text" id="transport" required>
+            </div>
+            <div class="form-group">
+                <label>Số người</label>
                 <input type="number" id="peopleMax" required>
             </div>
             <div class="form-group">
@@ -173,10 +183,65 @@
         <input type="file" id="imageInput" accept="image/*" multiple onchange="previewImages()">
         <div id="imagePreviewContainer" class="image-preview-container"></div>
         
-        <button type="submit" onclick="uploadImage()">Lưu</button>
+        <h3>Schedules</h3>
+		<table id="schedule-table" class="table">
+			<thead>
+				<tr>
+					<th>Step</th>
+					<th>Activity</th>
+					<th>Location</th>
+					<th>Action</th>
+					<th>Delete</th>
+				</tr>
+			</thead>
+			<tbody>
+				
+			</tbody>
+		</table>
+		<div class="btn-function">
+			<button type="button" class="btn-insert-schedule" >Tạo lịch trình</button>
+	
+		</div>
+
+        <button type="button" class="btn-save-all" onclick="creatTour()">Lưu</button>
     </form>
 </div>
+<!-- Modal Tạo Lịch Trình -->
+<div class="overlay1" id="overlay1"></div>
+		<div id="createModal" style="display: none;">
+			<div class="modal-content">
+				<h3>Tạo Lịch Trình</h3>
+				<!-- <label for="step-input">Step:</label> 
+				<input type="number" id="step-input" name="step">  -->
+				<label for="activity-input">Activity:</label>
+				<textarea type="text" id="activity-input" name="activity"></textarea>
+				<label for="location-input">Location:</label> 
+				<input type="text" id="location-input" name="location">
+				<button id="btn-Ok-Insert-Schedule" class="btn-ok">OK</button>
+				<button class="btn-cancel">Cancel</button>
+			</div>
+		</div>
 
+		<!-- sửa lịch trình -->
+		<div id="editModal" style="display: none;">
+			<div class="modal-content-edit">
+				<h3>Sửa Lịch Trình</h3>
+					<div class="infor-edit-schedule">
+						<label class="infor-edit-schedule-lable" for="step-input-edit"><b>Step:</b> </label> 
+						<span class="infor-edit-schedule-span" type="text" id="step-input-edit" name="step-input-edit"></span>
+					</div>
+
+				</div>
+				
+				<label for="activity-input-edit">Activity:</label>
+				<textarea type="text" id="activity-input-edit" name="activity"></textarea>
+				<label for="location-input-edit">Location:</label> 
+				<input type="text" id="location-input-edit" name="location">
+				
+				<button id="btn-Ok-Update-Schedule" class="btn-ok">OK</button>
+				<button type="button" id="btn-Cancel-Update-Schedule" class="btn-cancel-edit">Cancel</button>
+			</div>
+		</div>
 	
 	<script src="../js/tours_management.js"></script>
 </body> 
